<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_metal">
    >
  	<LinearLayout android:id="@+id/IconMenuBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="0px" android:paddingTop="0px">
		<ImageButton android:id="@+id/MapExplorerBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/map_explorer_f"></ImageButton>	
		<ImageButton android:id="@+id/ARExplorerBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/ar_explorer_f"></ImageButton>
		<ImageButton android:id="@+id/FriendFinderBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/friend_finder_f"></ImageButton>
		<ImageButton android:id="@+id/ASDGalleryBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/asd_gallery_f"></ImageButton>
		<ImageButton android:id="@+id/ASDGuidanceBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/asd_guidance_b"></ImageButton>	
	</LinearLayout>
    <FrameLayout android:id="@+id/BannerBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingLeft="0px" android:paddingTop="0px" android:orientation="vertical">
<ScrollView  
android:layout_height="900px"  
android:layout_width="fill_parent"  
> 
<LinearLayout  
  android:orientation="vertical"  
  android:layout_width="fill_parent"  
  android:layout_height="fill_parent"  
  >       

    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textColor="#FFEBEB" 
    android:textSize="20sp"
    android:text="@string/guidance_rules"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textColor="#FFFFEB" 
    android:textSize="20sp"
    android:text="@string/guidance_functions"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textColor="#EBFFFF" 
    android:textSize="20sp"
    android:text="@string/guidance_gestures"
    />
    <ImageView
    android:id="@+id/gesture1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/gesture1"
    />
    <ImageView
    android:id="@+id/gesture2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/gesture2"
    />
    <ImageView
    android:id="@+id/gesture3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/gesture3"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textColor="#FFEBFF" 
    android:textSize="20sp"
    android:text="@string/guidance_buildings"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textColor="#EBFFEB" 
    android:textSize="20sp"
    android:text="@string/guidance_webs"
    />
    
</LinearLayout>  
</ScrollView>  
  		<ImageView android:layout_width="wrap_content" android:id="@+id/imageView1" android:layout_height="wrap_content" android:background="@drawable/asdbanner" android:layout_gravity="bottom"></ImageView>
  	</FrameLayout> 
  
    
</LinearLayout>
